--- a/Congratulator/build.gradle
+++ b/Congratulator/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.compose.ui:ui-graphics:1.0.0-rc01'
+    implementation 'androidx.compose.ui:ui-graphics:1.3.0-alpha02'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
