--- a/Congratulator/build.gradle
+++ b/Congratulator/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.compose.ui:ui-graphics:1.3.0-alpha02'
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
+    implementation 'com.daimajia.androidanimations:library:2.4@aar'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
